change some static page and added static controller

--- a/pet-clinic-web/src/main/resources/static/single-blog.html
+++ b/pet-clinic-web/src/main/resources/static/single-blog.html
@@ -31,7 +31,7 @@
             <div class="row align-items-center">
                 <div class="col-4 col-md-4 col-xl-6">
                     <div id="logo">
-                        <a href="index.html"><img src="img/Logo.png" alt="" title=""/></a>
+                        <a href="../templates/index.html"><img src="img/Logo.png" alt="" title=""/></a>
                     </div>
                 </div>
                 <div class="col-8 col-md-8 col-xl-6 ">
@@ -57,16 +57,16 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="../templates/index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="about.html" class="nav-link active">About</a>
+                                    <a href="../templates/about.html" class="nav-link active">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="services.html" class="nav-link">services</a>
+                                    <a href="../templates/services.html" class="nav-link">services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="gallery.html" class="nav-link">gallery</a>
+                                    <a href="../templates/gallery.html" class="nav-link">gallery</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -79,10 +79,10 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="blog.html" class="nav-link">blog</a>
+                                    <a href="../templates/blog.html" class="nav-link">blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="contact.html" class="nav-link">Contact</a>
+                                    <a href="../templates/contact.html" class="nav-link">Contact</a>
                                 </li>
                             </ul>
                         </div>
