--- a/pet-clinic-web/src/main/resources/static/198 Animal adoption Doc/index.html
+++ b/pet-clinic-web/src/main/resources/static/198 Animal adoption Doc/index.html
@@ -136,7 +136,7 @@
                     <link rel="stylesheet" href="css/bootstrap.min.css">
 				    <link rel="stylesheet" href="css/animate.css">
 				    <link rel="stylesheet" href="css/owl.carousel.min.css">
-				    <link rel="stylesheet" href="css/themify-icons.css">
+				    <link rel="stylesheet" href="../css/themify-icons.css">
 				    <link rel="stylesheet" href="css/flaticon.css">
 				    <link rel="stylesheet" href="css/magnific-popup.css">
 				    <link rel="stylesheet" href="css/slick.css">
